feat: categorizar productos
